fire tick damage does at the most 1 damage and at the least is square rooted before doing damage, to make it deal closer to 1 damage also blazes don't do contact damage if you are .5 size to them or smaller
also "soft" items like wool, string, leaves (and sticks) can do 1/4th damage to smols (you poke them basically)